fixed css for <sic> not wrapped in <choice>

--- a/frameworks/teip5alea/css/collapsed.css
+++ b/frameworks/teip5alea/css/collapsed.css
@@ -72,8 +72,13 @@ corr {
     direction:inherit !important;
 }
 
-sic {
+choice > sic {
     display: none;
+}
+
+sic {
+    -oxy-display-tags: none;
+    color:gray;
 }
 
 unclear {
